Added restrictive mode

--- a/flask_auth_app/project/templates/login.html
+++ b/flask_auth_app/project/templates/login.html
@@ -33,6 +33,13 @@
 			</div>
 			<button class="button is-block is-info is-large is-fullwidth">Login</button>
 		</form>
+		<div class="">
+			<button class="button is-block is-info is-large is-fullwidth">
+				<span>
+					<a class="nav-link" href="{{url_for('auth.signup')}}">Sign Up</a>
+				</span>
+			</button>
+		</div>
 	</div>
 </div>
 {% endblock %}
