--- a/flask_auth_app/project/templates/base.html
+++ b/flask_auth_app/project/templates/base.html
@@ -15,22 +15,41 @@
 	<title>{% block title %} {% endblock %}</title>
   </head>
   <body>
+  	<!-- Navigation bar -->
 	<nav class="navbar navbar-expand-md navbar-light bg-light">
-		<a class="navbar-brand" href="{{ url_for('main.index')}}">FlaskBlog</a>
+		<a class="navbar-brand" href="{{ url_for('main.index')}}">Flask Blog</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
-			<li class="nav-item active">
-				<a class="nav-link" href="#">About</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="{{url_for('main.create')}}">New Post</a>
-			</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="{{url_for('main.index')}}">Home</a>
+				</li>
+				{% if not current_user.is_authenticated %}
+				<li class="nav-item">
+					<a class="nav-link" href="{{url_for('auth.login')}}">Login</a>
+				</li>
+				{% endif %}
+				{% if not current_user.is_authenticated %}
+				<li class="nav-item">
+					<a class="nav-link" href="{{url_for('auth.signup')}}">Sign Up</a>
+				</li>
+				{% endif %}
+				{% if current_user.is_authenticated %}
+				<li class="nav-item">
+					<a class="nav-link" href="{{url_for('main.create')}}">New Post</a>
+				</li>
+				{% endif %}
+				{% if current_user.is_authenticated %}
+				<li class="nav-item">
+					<a class="nav-link" href="{{url_for('auth.logout')}}">Logout</a>
+				</li>
+				{% endif %}
 			</ul>
 		</div>
 	</nav>
+	<!-- Blog Posts -->
 	<div class="container">
 		{% for message in get_flashed_messages() %}
 			<div class="alert alert-danger">{{ message }}</div>
@@ -45,59 +64,3 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
-
-
-
-
-<!-- <body>
-	<section class="hero is-primary is-fullheight">
-
-		<div class="hero-head">
-			<nav class="navbar">
-				<div class="container">
-					<div id="navbarMenuHeroA" class="navbar-menu">
-						<div class="navbar-end">
-							<a href="{{ url_for('main.index') }}" class="navbar-item">
-								Home
-							</a>
-							{% if current_user.is_authenticated %}
-							<a href="{{ url_for('main.profile') }}" class="navbar-item">
-								Profile
-							</a>
-							{% endif %}
-							{% if not current_user.is_authenticated %}
-							<a href="{{ url_for('auth.login') }}" class="navbar-item">
-								Login
-							</a>
-							<a href="{{ url_for('auth.signup') }}" class="navbar-item">
-								Sign Up
-							</a>
-							{% endif %}
-							{% if current_user.is_authenticated %}
-							<a href="{{ url_for('auth.logout') }}" class="navbar-item">
-								Logout
-							</a>
-							{% endif %}
-						</div>
-					</div>
-				</div>
-			</nav>
-		</div>
-
-		<div class="hero-body">
-			<div class="container has-text-centered">
-
-
-
-
-
-
-
-
-
-
-
-			</div>
-		</div>
-	</section>
-</body> -->
