--- a/flask_auth_app/project/templates/edit.html
+++ b/flask_auth_app/project/templates/edit.html
@@ -2,7 +2,6 @@
 
 {% block content %}
 <h1>{% block title %} Edit "{{ post['title'] }}" {% endblock %}</h1>
-
 <form method="post">
 	<div class="form-group">
 		<label for="title">Title</label>
@@ -21,7 +20,7 @@
 	</div>
 </form>
 <hr>
-<form action="{{ url_for('delete', id=post['id']) }}" method="POST">
+<form action="{{ url_for('main.delete', id=post['id']) }}" method="POST">
 	<input type="submit" value="Delete Post"
 			class="btn btn-danger btn-sm"
 			onclick="return confirm('Are you sure you want to delete this post?')">
